# aoc2025

./: .gitignore  Cargo.toml  new_day.sh
src/: lib.rs  main.rs
src/days/: day01.rs
